src/css/injected.scss
/* ... */
.dailycal
  > .content
  > .wrapper
  > .days
  > tbody
  > tr
  > td
  > .entriesWrapper
  > .entry {
  padding: 3px;
  transition: opacity 0.2s ease-in-out;
}
[class*="Viewer__Viewer___"] {
  background: unset;

  [class*="ReadingPane__ReadingPane___"] {
    > [class*="Message__unread___"] > header {
      box-shadow: none !important;
      position: relative;

      &::before {
        content: "";
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        width: 4px;
        background: var(--better-main);
      }
    }
  }
}
.weekend {
  display: none !important;
}
.days {
  width: 100%;
}
.modaliser {
  display: none;
  background: var(--better-main);
}

[class*="MessageList__unread___"] {
  position: relative;
  background: rgb(228 225 225);
}

.dark [class*="MessageList__unread___"] {
  background: rgba(0, 0, 0, 0.1);
}

[class*="MessageList__MessageList___"] > ol > li:hover {
  background: var(--theme-offset-bg-more);
}

.MenuButton__Menu___gXTaY > button {
  border-radius: 1600px;
}

[class*="MessageList__MessageList___"]
  > ol
  > li[class*="MessageList__selected___"]
  [class*="MessageList__unread___"] {
  box-shadow: none;
}

[class*="Message__Message___"] [class*="Message__unread___"] > header {
  box-shadow: none;
}

[class*="MessageList__MessageList___"]
  > ol
  > li[class*="MessageList__unread___"]::before,
[class*="MessageList__MessageList___"] > ol > li::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  background: var(--better-main);
  width: 0px;
  transition: width 0.1s;
}

[class*="MessageList__MessageList___"]
  > ol
  > li[class*="MessageList__unread___"]::before {
  width: 3px;
}
.connectedNotificationsWrapper > div > button {
  background: var(--text-primary) !important;
  border-radius: 10px !important;
  color: var(--background-primary) !important;
  height: 42px;
  justify-content: center;
  right: 47px;
  top: 14px;
  width: 42px;
  z-index: 21;
}
#userActions > .details > .name::before {
  content: "";
  width: 14px;
  height: 12px;
  background-image: url("../resources/icons/betterseqta-light-outline.png");
  display: inline-block;
  background-size: 18px 18px;
  color: #fff;
  margin-right: 2px;
  background-position: center;
  vertical-align: top;
}
#userActions > .details {
  opacity: unset !important;
  color: var(--text-color);
}
.defaultWelcomeWrapper {
  background: unset !important;
}
.clr-swatches button::after,
.clr-dark .clr-preview::after,
.clr-field button::after {
  opacity: unset;
  padding-top: unset;
  -webkit-transform: unset;
  transform: unset;
  -webkit-transform-origin: unset;
  transform-origin: unset;
  visibility: unset;
  -webkit-animation-name: unset !important;
  animation-name: unset !important;
  background-color: currentColor !important;
}
.clr-swatches button {
  align-items: unset;
  display: block;
  padding: unset;
  transition: none;
}
.clr-clear {
  display: none !important;
}
.clr-preview::before,
.clr-preview::after {
  visibility: unset;
  -webkit-transform-origin: unset;
  transform-origin: unset;
  -webkit-transform: unset;
  transform: unset;
  padding-top: unset;
  opacity: unset;
}
#clr-color-preview {
  margin: 15px 0 20px 20px;
  border: 0;
  border-radius: 50%;
  overflow: hidden;
  cursor: pointer;
}

.dark
  [class*="MessageList__MessageList___"]
  > ol
  > li[class*="MessageList__selected___"] {
  background: var(--background-secondary);
}

[class*="MessageList__MessageList___"]
  > ol
  > li[class*="MessageList__selected___"] {
  background: rgb(228 225 225);
  color: var(--text-primary);
  box-shadow: none !important;
  position: relative;
}
.NewsArticle {
  border-radius: 16px !important;
  overflow: hidden;
  width: 100%;
  padding: 0 !important;
  background: var(--background-primary) !important;
  color: var(--text-primary);
  display: flex;
  flex-direction: row;
  -webkit-box-shadow: 0px 5px 16px 6px rgba(0, 0, 0, 0.3);
  box-shadow: 0px 5px 16px 6px rgba(0, 0, 0, 0.3);

  &:hover {
    .ArticleText a {
      text-decoration: underline;
    }
  }

  .ArticleText a {
    padding: 10px 20px;
    margin: 0;
    font-weight: 800;
    font-size: 2em;
    background: none;
  }

  .ArticleText p {
    padding: 10px 20px;
    margin: 0;
    font-size: 1.5em;
  }

  .ArticleText {
    display: flex;
    flex-direction: column;
    width: 65%;
    height: 100%;
  }

  .articleimage {
    width: 35%;
    background-position: center;
    background-size: cover;
    min-height: 18em;
    background-repeat: no-repeat;
  }
}

#news-container {
  gap: 16px;

  > h1 {
    margin-bottom: 12px;
  }
}
.editmenu {
  position: absolute;
  right: 0;
  height: 64px;
  align-items: center;
  display: flex;
  width: 20%;
  justify-content: center;
}
.editmenu svg:hover > path {
  fill: #aaaaaa;
}
.editmenu svg:hover {
  cursor: pointer;
}
.notMenuCover {
  width: 100%;
  height: 100%;
  background: black;
  position: absolute;
  z-index: 10;
  opacity: 0.4;
}
#menu {
  --menuHidden: none;
}
.editmenuoption {
  background: var(--background-primary);
  color: var(--text-primary);
  border-radius: 5px;
  margin: 0 10px;
  padding: 8px;
  cursor: pointer;
}
.editmenuoption-container {
  width: 100%;
  height: 42px;
  background: var(--better-main);
  bottom: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.logout {
  background: none !important;
  padding: 5px 10px;
}

#logouttooltip {
  width: 50px !important;
  margin-left: -28px !important;
  top: 105% !important;

  .uiButton svg g {
    color: var(--background-primary) !important;
  }
}
.svg {
  transform-origin: center;
  position: absolute;
  top: 50%;
  left: 50%;
}
.logo {
  transform: translate(-50%, -50%);
}
.big-circle {
  margin: -88px;
  animation: spin 3s ease infinite;
  -moz-animation: spin 3s ease infinite;
}

.small-circle {
  margin: -66px;
  animation: spin 3s ease infinite;
  -moz-animation: spin 3s ease infinite;
}
/* ... */

